deployment/ocp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-iwa-java-svc
  namespace: web-team-dev
spec:
  selector:
    app: demo-iwa-java
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
